--- a/intelinfo/src/main/webapp/css/style.css
+++ b/intelinfo/src/main/webapp/css/style.css
@@ -1,107 +1,163 @@
-@import url("http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900");
+    @import url("http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900");
 
-body,html {
-	height: 100%;
-	padding:0px;
-	margin:0px;
-	background-color: #dfc8ca;
-}
+    [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+      display: none !important;
+    }
 
-.roboto {
-    font-family: "Roboto";
-}
+    body,html {
+        height: 100%;
+        padding:0px;
+        margin:0px;
+        background-color: #dfc8ca;
+    }
 
-.fw-400 { 
-	font-weight: 400; 
-}
+    .roboto {
+        font-family: "Roboto";
+    }
 
-.container{
-    text-align: center;
-    display: table;
-    width: 100%;
-    height: 100%;
-}
+    .fw-400 { 
+        font-weight: 400; 
+    }
 
-#child{
-	display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-}
+    .container{
+        text-align: center;
+        display: table;
+        width: 100%;
+        height: 100%;
+    }
 
-#label1{
-	margin-left:-35%;
-	color:#000;
-	font-weight:normal;
-	font-size:12px;
-}
+    #child{
+        display: table-cell;
+        text-align: center;
+        vertical-align: middle;
+    }
 
-.lists{
-	color:#000;
-	font-weight:normal;
-	font-size: 15px;
-	border-radius: 5px 5px 5px 5px ;
-	height:40px;
-	width:600px;
-}
+    #label1{
+        margin-left:-35%;
+        color:#000;
+        font-weight:normal;
+        font-size:12px;
+    }
 
-#label2{
-    display:inline;
-    color:#000;
-    margin-left:1%;
-}
+    .lists{
+        color:#000;
+        font-weight:normal;
+        font-size: 15px;
+        border-radius: 5px 5px 5px 5px ;
+        height:40px;
+        width:600px;
+    }
 
-.inputfile {
-	width: 0.1px;
-	height: 0.1px;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
-	z-index: -1;
-}
+    #label2{
+        display:inline;
+        color:#000;
+        margin-left:1%;
+    }
 
-.inputfile + label {
-	cursor: pointer;   
-}
+    .inputfile {
+        width: 0.1px;
+        height: 0.1px;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        z-index: -1;
+    }
 
-a:link{
-	text-decoration: none;
-}
+    .inputfile + label {
+        cursor: pointer;   
+    }
 
-a:hover {
-   color:#000;
-}
+    a:link{
+        text-decoration: none;
+    }
 
-a:visited{
-    color:#000;
-}
+    a:hover {
+       color:#000;
+    }
 
-a{
-	font-weight: bold;
-	color:#000;
-}
+    a:visited{
+        color:#000;
+    }
 
-.test + .tooltip > .tooltip-inner {
-    background-color: rgba(0,0,0,0.3); 
-    color: #fff; 
-    border: 1px;
-    padding: 10px;
-    font-size: 12px;
-    opacity: 0.8;
-    margin-left:5px;
-    margin-bottom:40px;
-  }
+    a{
+        font-weight: bold;
+        color:#000;
+    }
 
-.test + .tooltip.right > .tooltip-arrow {
-    border-right: 5px solid black;
-    opacity:0.5;
-    margin-left:5px;
-    margin-bottom:10px;  
-}
+    .test + .tooltip > .tooltip-inner {
+        background-color: rgba(0,0,0,0.3); 
+        color: #fff; 
+        border: 1px;
+        padding: 10px;
+        font-size: 12px;
+        opacity: 0.8;
+        margin-left:5px;
+        margin-bottom:40px;
+      }
 
-#myfile{
-	color:red;
-	font-weight: normal;
-}
+    .test + .tooltip.right > .tooltip-arrow {
+        border-right: 5px solid black;
+        opacity:0.5;
+        margin-left:5px;
+        margin-bottom:10px;  
+    }
+
+    #myfile{
+        color:red;
+        font-weight: normal;
+    }
 
 
 
+    /*for progress circle*/
+
+
+            .progress-wrapper{
+                position: relative;
+                margin:2px auto;
+                font-size: 40px;
+            }
+
+            .progress{
+                position: absolute;
+                color: #bbb;
+                font-weight: 100;
+                line-height: 1;
+            }
+
+            .prog-container{
+                width: 100%;
+                max-width: 960px;
+                margin:0px;
+                text-align: center;
+            }
+
+            #progbutton{
+                display: inline-block;
+                padding: 10px 20px;
+                background: #45ccce;
+                color:#fff;
+                font-size: 16px;
+                border:none;
+                cursor: pointer;
+                border-radius: 4px;
+                text-align: center;
+                margin: 0 5px 5px 0;
+            }
+
+
+
+            @media(max-width: 480px){
+
+                .prog-container{
+                    margin-top: 25px;
+                }
+            }
+
+    div.progress.ng-binding{
+        font-size:6px;
+        background-color: #dfc8ca;
+        font-weight: bold;
+        color:#000;
+        top:45%;
+    }
